--- a/src/components/body/Body.scss
+++ b/src/components/body/Body.scss
@@ -1,22 +1,18 @@
 .body-container {
     padding: 100px 50px;
     border: 1px solid red;
-    // background-image: url('../../resources/sun.png');
 
     .discovery {
         width: 75%;
         margin: 0 auto;
-        // border: 1px solid yellow;
         position: relative;
         .sun {
             width: 100%;
-            // border: 1px solid red;
         }
 
         .sun-contents {
             position: absolute;
             top: 0;
-            // margin-top: 300px;
             bottom: 0;
             left: 0;
             right: 0;
@@ -30,11 +26,7 @@
             }
 
             .mid-square {
-                // position: absolute;
-                // top: 0;
-                // border: 1px solid red;
                 color: white;
-                // font-family: Helvetica Neue;
                 line-height: 0;
                 p{
                     font-size: 4rem;
@@ -67,6 +59,53 @@
             .smaller {
                 max-height: 170px;
                 max-width: 170px
+            }
+        }
+    }
+
+
+    .projects {
+        color: white;
+        font-size: 1.7rem;
+       
+        img {
+            max-width: 800px;
+        }
+
+        
+
+        p {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        .project {
+            background-color: #333333;
+            max-width: 1200px;
+            margin: 0 auto 150px auto;
+            border-radius: 20px;
+            padding-bottom: 50px;
+            padding-top: 40px;
+
+            div {
+                text-align: left;
+            }
+
+            .header-div {
+                display: flex;
+                max-width: 1100px;
+                margin: 0 auto;
+                align-items: center;
+                
+                .logo {
+                    max-height: 40px;
+                    max-width: 40px;
+                }
+                p {
+                    width: 100%;
+                    margin-left: 10px;
+                    font-size: 2.3rem;
+                }
             }
         }
     }
