--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@
 .max-width {
   max-width: 1920px;
   margin: 0 auto;
-  border: 1px solid red
+  // border: 1px solid red
 }
 
 @keyframes App-logo-spin {
