--- a/src/components/body/Body.scss
+++ b/src/components/body/Body.scss
@@ -1,6 +1,6 @@
 .body-container {
     padding: 100px 50px;
-    border: 1px solid red;
+    // border: 1px solid red;
 
     .discovery {
         width: 75%;
