--- a/src/components/body/Body.scss
+++ b/src/components/body/Body.scss
@@ -96,10 +96,11 @@
                 max-width: 1100px;
                 margin: 0 auto;
                 align-items: center;
-                
+            
                 .logo {
-                    max-height: 40px;
-                    max-width: 40px;
+                    height: 40px;
+                    width: 40px;
+                    border-radius: 10px;
                 }
                 p {
                     width: 100%;
